Fix logo spacing

--- a/src/styles/partials/components/_contentblock.scss
+++ b/src/styles/partials/components/_contentblock.scss
@@ -101,8 +101,6 @@ $scroll-down-size: 60px;
 				margin: 40px auto;
 				@media(min-width:$screen-lg){
 					font-size: 100px;
-					margin: 80px auto;
-
 				}
 
 			}
